@@ -1,6 +1,13 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+16-May-2004 (Lars Duening)  (3.3.548)
+  - (my-stdint.h) I checked for a subtly wrong define here, causing the
+       compilation to break on Linux (reported by Ralph).
+  - (configure, my-stdint.h) FreeBSD doesn't have stdint.h, but it
+       has inttypes.h which serves mostly the same purpose (reported by
+       Joseph).
+
 15-May-2004 (Lars Duening)  (3.3.547)
   - (configure, my-stdint.h, sha1.h) Added a test for and a replacement
        of the C99 include file stdint.h, which is required by the sha1
